--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -30,6 +34,26 @@ dependencies {
     // dagger2
     implementation 'com.google.dagger:dagger:2.27'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.27'
+
+    // lifecycle
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+    implementation "android.arch.lifecycle:reactivestreams:$lifecycle_version"
+
+    // rx
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+
+    implementation 'com.trello.rxlifecycle3:rxlifecycle:3.1.0'
+    implementation "com.jakewharton.rxbinding3:rxbinding:$rxbinding3@aar"
+    implementation "com.jakewharton.rxbinding3:rxbinding-appcompat:$rxbinding3"
+    implementation "com.jakewharton.rxbinding3:rxbinding-drawerlayout:$rxbinding3"
+    implementation "com.jakewharton.rxbinding3:rxbinding-leanback:$rxbinding3"
+    implementation "com.jakewharton.rxbinding3:rxbinding-recyclerview:$rxbinding3"
+    implementation "com.jakewharton.rxbinding3:rxbinding-slidingpanelayout:$rxbinding3"
+    implementation "com.jakewharton.rxbinding3:rxbinding-swiperefreshlayout:$rxbinding3"
+    implementation "com.jakewharton.rxbinding3:rxbinding-viewpager:$rxbinding3"
+    implementation "com.jakewharton.rxbinding3:rxbinding-material:$rxbinding3"
+    implementation 'com.jakewharton.rx2:replaying-share:2.1.1'
 
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
