--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@
 buildscript {
     ext.lifecycle_version = '2.1.0'
     ext.rxbinding3 = '3.1.0'
+    ext.nav_version = "2.3.0"
+    ext.work_version = "2.4.0"
+    ext.room_version = "2.2.5"
 
     repositories {
         google()
