--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,24 +34,9 @@ dependencies {
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'com.google.android.material:material:1.2.0'
 
-    api 'com.google.guava:guava:28.0-android'
-
     // navigation
     implementation "androidx.navigation:navigation-fragment:$nav_version"
     implementation "androidx.navigation:navigation-ui:$nav_version"
-
-    // room
-    implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
-
-    // retrofit
-    implementation "com.squareup.retrofit2:retrofit:2.9.0"
-    implementation "com.squareup.retrofit2:converter-gson:2.6.0"
-    implementation "com.squareup.retrofit2:adapter-rxjava3:2.9.0"
-
-    // okHttp
-    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.9'
-    implementation 'com.squareup.okhttp3:okhttp:3.14.9'
 
     // images
     implementation 'com.squareup.picasso:picasso:2.71828'
@@ -61,6 +46,8 @@ dependencies {
 
     // dagger2
     implementation 'com.google.dagger:dagger:2.28.3'
+    implementation project(path: ':models')
+    implementation project(path: ':mvi')
     annotationProcessor 'com.google.dagger:dagger-compiler:2.28.3'
 
     // lifecycle
