--- a/models/build.gradle
+++ b/models/build.gradle
@@ -20,6 +20,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
@@ -30,7 +34,6 @@ dependencies {
     
     // room
     implementation "androidx.room:room-runtime:$room_version"
-    implementation project(path: ':models')
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
     // retrofit
@@ -46,5 +49,4 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
 }
