--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,9 @@ android {
 }
 
 dependencies {
+    // implementation project(path: ':models')
+    implementation project(':mvi')
+    implementation project(':models')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.1'
@@ -44,12 +47,6 @@ dependencies {
     // json
     implementation "com.google.code.gson:gson:2.8.5"
 
-    // dagger2
-    implementation 'com.google.dagger:dagger:2.28.3'
-    implementation project(path: ':models')
-    implementation project(path: ':mvi')
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.28.3'
-
     // lifecycle
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
     implementation "android.arch.lifecycle:reactivestreams:$lifecycle_version"
@@ -65,5 +62,4 @@ dependencies {
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
 }
