--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.kotlin_version = '1.4.30'
     ext.lifecycle_version = '2.1.0'
+    ext.lifecycle_ktx = "2.2.0"
     ext.rxbinding3 = '3.1.0'
     ext.nav_version = "2.3.3"
     ext.work_version = "2.5.0"
@@ -19,6 +21,8 @@ buildscript {
     ext.junit = "4.13.1"
     ext.junit_android = "1.1.2"
     ext.espresso = "3.3.0"
+    ext.ktx = "1.3.2"
+
 
     project.ext {
         min = 20
@@ -33,6 +37,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
