--- a/models_impl/build.gradle
+++ b/models_impl/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion project.compile
@@ -49,4 +50,9 @@ dependencies {
     // rx
     implementation "io.reactivex.rxjava3:rxjava:$rx_java"
     implementation "io.reactivex.rxjava3:rxandroid:$rx_android"
+    implementation "androidx.core:core-ktx:+"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+}
+repositories {
+    mavenCentral()
 }
