--- a/build.gradle
+++ b/build.gradle
@@ -14,15 +14,15 @@ buildscript {
     ext.gson = "2.8.6"
     ext.guava = "28.0-android"
     ext.retrofit = "2.9.0"
-    ext.retrofit_gson = "2.6.0"
+    ext.retrofit_gson = "2.6.2"
     ext.retrofit_rx = "2.9.0"
-    ext.okhttp_log = "3.14.9"
-    ext.okhttp = "3.14.9"
+    ext.okhttp_log = "4.9.0"
+    ext.okhttp = "4.9.0"
     ext.junit = "4.13.1"
     ext.junit_android = "1.1.2"
     ext.espresso = "3.3.0"
     ext.ktx = "1.3.2"
-
+    ext.coroutins = "1.4.2"
 
     project.ext {
         min = 20
