--- a/models_impl/build.gradle
+++ b/models_impl/build.gradle
@@ -1,7 +1,8 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-kapt'
-
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
+}
 android {
     compileSdkVersion project.compile
     buildToolsVersion project.tools
@@ -55,6 +56,10 @@ dependencies {
     implementation "io.reactivex.rxjava3:rxandroid:$rx_android"
     implementation "androidx.core:core-ktx:$ktx"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
+    // coruotins
+//    implementation "androidx.core:core-ktx:$ktx"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutins"
 }
 
 repositories {
