--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: "androidx.navigation.safeargs"
 
 android {
     compileSdkVersion project.compile
@@ -10,6 +11,7 @@ android {
         targetSdkVersion project.target
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -35,7 +37,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.material:material:1.3.0'
 
     // navigation
     implementation "androidx.navigation:navigation-fragment:$nav_version"
@@ -58,6 +60,8 @@ dependencies {
     // (Java only)
     implementation "androidx.work:work-runtime:$work_version"
 
+    // multidex
+    implementation "androidx.multidex:multidex:2.0.1"
 
     testImplementation "junit:junit:$junit"
 
