# flows, Rx and guava removed

--- a/models/build.gradle
+++ b/models/build.gradle
@@ -31,12 +31,6 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "androidx.appcompat:appcompat:$compat"
 
-    api "com.google.guava:guava:$guava"
-
-    // rx
-    implementation "io.reactivex.rxjava3:rxjava:$rx_java"
-    implementation "io.reactivex.rxjava3:rxandroid:$rx_android"
-
     // room
     implementation "androidx.room:room-runtime:$room"
     annotationProcessor "androidx.room:room-compiler:$room_compiler"
@@ -46,7 +40,7 @@ dependencies {
     implementation "androidx.core:core-ktx:$ktx"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    // coruotins
+    // coroutins
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutins"
 }
 
