--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,11 +61,7 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_ktx"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_ktx"
 
-    // rx
-    implementation "io.reactivex.rxjava3:rxjava:$rx_java"
-    implementation "io.reactivex.rxjava3:rxandroid:$rx_android"
-
-    // (Java only)
+    // (Java only) // TODO: connect for Kotlin
     implementation "androidx.work:work-runtime:$work_version"
 
     testImplementation "junit:junit:$junit"
