--- a/.github/workflows/u_tests.yml
+++ b/.github/workflows/u_tests.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   Unit-test:
-  name: Run unit tests on PR in main
+  name: Run unit tests on branch dev
   runs-on: ubuntu-20.04
 
   steps:
