--- a/.github/workflows/u_tests.yml
+++ b/.github/workflows/u_tests.yml
@@ -9,11 +9,11 @@ on:
       - 'dev'
 
 jobs:
-  Unit-test:
-  name: Run unit tests on push or MR in branch dev
-  runs-on: ubuntu-20.04
+  unit_tests:
+  runs-on: ubuntu-latest
 
   steps:
+    - name: Run unit tests on push or MR in branch dev
     - uses: actions/checkout@v2
     - uses: actions/setup-java@v1
       with: {java-version: 1.8}
