--- a/.github/workflows/u_tests.yml
+++ b/.github/workflows/u_tests.yml
@@ -10,12 +10,12 @@ on:
 
 jobs:
   unit_tests:
-  runs-on: ubuntu-latest
+    name: Run unit tests on push or MR in branch dev
+    runs-on: ubuntu-latest
 
-  steps:
-    - name: Run unit tests on push or MR in branch dev
-    - uses: actions/checkout@v2
-    - uses: actions/setup-java@v1
-      with: {java-version: 1.8}
-    - name: Run unit tests
-      run: ./gradlew test
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-java@v1
+        with: {java-version: 1.8}
+      - name: Run unit tests
+        run: ./gradlew test
