--- a/.github/workflows/u_tests.yml
+++ b/.github/workflows/u_tests.yml
@@ -19,3 +19,14 @@ jobs:
         with: {java-version: 1.8}
       - name: Run unit tests
         run: ./gradlew test
+
+#  android_tests:
+#    runs-on: [ macos-latest ]
+#    steps:
+#      - uses: actions/checkout@v2
+#
+#      - name: Instrumentation Tests
+#        uses: reactivecircus/android-emulator-runner@v2
+#        with:
+#          api-level: 29
+#          script: ./gradlew connectedAndroidTest
