--- a/.github/workflows/u_tests.yml
+++ b/.github/workflows/u_tests.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/setup-java@v1
         with: {java-version: 1.8}
       - name: Run unit tests
-        run: ./gradlew test
+        run: ./gradlew test --stacktrace
 
 #  android_tests:
 #    runs-on: [ macos-latest ]
