--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,7 @@ dependencies {
 
     testImplementation "junit:junit:$junit"
     testImplementation 'org.mockito:mockito-core:3.7.0'
-    testImplementation 'com.nhaarman:mockito-kotlin-kt1.1:1.5.0'
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
     testImplementation "android.arch.core:core-testing:1.1.1"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2"
 
