--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,16 +64,17 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:$work_version"
 
     testImplementation "junit:junit:$junit"
-    testImplementation 'org.mockito:mockito-core:3.7.0'
+    testImplementation "org.mockito:mockito-core:3.7.0"
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
     testImplementation "android.arch.core:core-testing:1.1.1"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2"
+    testImplementation "com.google.code.gson:gson:$gson"
 
     androidTestImplementation "androidx.test.ext:junit:$junit_android"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.3.0'
+    androidTestImplementation "androidx.test.ext:junit:1.1.2"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.3.0"
+    androidTestImplementation "com.android.support.test.espresso:espresso-contrib:3.3.0"
 
     implementation "androidx.core:core-ktx:$ktx"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
