--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = '1.5.21'
-    ext.lifecycle_version = '2.1.0'
     ext.lifecycle_ktx = "2.3.1"
-    ext.rxbinding3 = '3.1.0'
     ext.nav_version = "2.3.5"
     ext.work_version = "2.6.0"
     ext.room = "2.3.0"
@@ -28,6 +26,7 @@ buildscript {
     }
 
     repositories {
+        mavenCentral()
         google()
         jcenter()
     }
@@ -43,6 +42,7 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
         google()
         jcenter()
     }
