--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,14 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
+    buildFeatures {
+        compose true
+    }
+    
     buildTypes {
         release {
             minifyEnabled false
@@ -38,6 +46,16 @@ dependencies {
     implementation project(':models_impl')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "androidx.multidex:multidex:2.0.1"
+
+    implementation "androidx.compose.runtime:runtime:$composeVersion"
+    implementation "androidx.compose.ui:ui:$composeVersion"
+    implementation "androidx.compose.foundation:foundation:$composeVersion"
+    implementation "androidx.compose.foundation:foundation-layout:$composeVersion"
+    implementation "androidx.compose.material:material:$composeVersion"
+    implementation "androidx.compose.runtime:runtime-livedata:$composeVersion"
+    implementation "androidx.compose.ui:ui-tooling:$composeVersion"
+    implementation "com.google.android.material:compose-theme-adapter:$composeVersion"
+
 
     implementation "androidx.appcompat:appcompat:$compat"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
