--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.5.21'
+    ext.kotlin_version = '1.4.32' // '1.5.21'
     ext.lifecycle_ktx = "2.3.1"
     ext.nav_version = "2.3.5"
     ext.work_version = "2.6.0"
@@ -17,9 +17,10 @@ buildscript {
     ext.espresso = "3.4.0"
     ext.ktx = "1.6.0"
     ext.coroutins = "1.5.0"
+    ext.composeVersion = "1.0.3"
 
     project.ext {
-        min = 20
+        min = 21
         target = 30
         compile = 30
         tools = "30.0.2"
