--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,9 @@ dependencies {
     // images
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    // image loading
+    implementation 'io.coil-kt:coil-compose:1.3.0'
+
     // json
     implementation "com.google.code.gson:gson:$gson"
 
