--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,9 @@ android {
     buildFeatures {
         compose true
     }
-    
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.1.0-alpha05"
+    }
     buildTypes {
         release {
             minifyEnabled false
