--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.5.31' // '1.5.21'
+    ext.kotlin_version = '1.5.31'
     ext.lifecycle_ktx = "2.3.1"
     ext.nav_version = "2.3.5"
     ext.work_version = "2.6.0"
