--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,10 @@ org.gradle.jvmargs=-Xmx2048m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
+org.gradle.parallel=true
+org.gradle.configureondemand=true
+org.gradle.caching=true
+kotlin.code.style=official
+-Pkapt.use.worker.api=true
+kapt.incremental.apt=true
+android.enableR8.fullMode=false
