--- a/models_impl/build.gradle
+++ b/models_impl/build.gradle
@@ -2,7 +2,9 @@ plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
+
 android {
     compileSdkVersion project.compile
     buildToolsVersion project.tools
@@ -24,6 +26,9 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 }
 
@@ -50,14 +55,23 @@ dependencies {
     // coroutins
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutins"
 
+    // hilt
+    implementation("com.google.dagger:hilt-android:2.38.1")
+    kapt("com.google.dagger:hilt-android-compiler:2.38.1")
+    kapt("androidx.hilt:hilt-compiler:$hilt_jetpack")
+
     testImplementation "junit:junit:$junit"
-    testImplementation "org.mockito:mockito-core:3.7.0"
-    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
-    testImplementation "android.arch.core:core-testing:1.1.1"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0"
+    testImplementation "org.mockito:mockito-core:$mockito_core"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockito_kotlin"
+    testImplementation "android.arch.core:core-testing:$testing_core"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$testing_coroutine"
     testImplementation "com.google.code.gson:gson:$gson"
 }
 
 repositories {
     mavenCentral()
+}
+
+kapt{
+    correctErrorTypes true
 }
