--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -21,7 +22,7 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = "1.8"
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
     }
 
     buildFeatures {
@@ -73,6 +74,13 @@ dependencies {
     // json
     implementation "com.google.code.gson:gson:$gson"
 
+    // hilt
+    implementation("com.google.dagger:hilt-android:2.38.1")
+    kapt("com.google.dagger:hilt-android-compiler:2.38.1")
+    implementation("androidx.hilt:hilt-navigation-fragment:$hilt_jetpack")
+    kapt("androidx.hilt:hilt-compiler:$hilt_jetpack")
+    implementation 'androidx.hilt:hilt-work:1.0.0'
+
     // lifecycle
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_ktx"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_ktx"
@@ -80,19 +88,22 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:$work_version"
 
     testImplementation "junit:junit:$junit"
-    testImplementation "org.mockito:mockito-core:3.7.0"
-    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
-    testImplementation "android.arch.core:core-testing:1.1.1"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0"
+    testImplementation "org.mockito:mockito-core:$mockito_core"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:$mockito_kotlin"
+    testImplementation "android.arch.core:core-testing:$testing_core"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$testing_coroutine"
     testImplementation "com.google.code.gson:gson:$gson"
 
     androidTestImplementation "androidx.test.ext:junit:$junit_android"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso"
-    androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
     androidTestImplementation "com.android.support.test.espresso:espresso-contrib:3.3.0"
 
     implementation "androidx.core:core-ktx:$ktx"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutins"
+}
+
+kapt{
+    correctErrorTypes true
 }
