--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,8 +65,8 @@ dependencies {
     implementation "com.google.accompanist:accompanist-swiperefresh:0.19.0"
 
     // navigation
-    implementation "androidx.navigation:navigation-fragment:$nav_version"
-    implementation "androidx.navigation:navigation-ui:$nav_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
     // image loading
     implementation 'io.coil-kt:coil-compose:1.3.0'
@@ -75,8 +75,8 @@ dependencies {
     implementation "com.google.code.gson:gson:$gson"
 
     // hilt
-    implementation("com.google.dagger:hilt-android:2.38.1")
-    kapt("com.google.dagger:hilt-android-compiler:2.38.1")
+    implementation("com.google.dagger:hilt-android:2.39.1")
+    kapt("com.google.dagger:hilt-android-compiler:2.39.1")
     implementation("androidx.hilt:hilt-navigation-fragment:$hilt_jetpack")
     kapt("androidx.hilt:hilt-compiler:$hilt_jetpack")
     implementation 'androidx.hilt:hilt-work:1.0.0'
@@ -101,7 +101,7 @@ dependencies {
 
     implementation "androidx.core:core-ktx:$ktx"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutins"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines"
 }
 
 kapt{
