--- a/models/build.gradle
+++ b/models/build.gradle
@@ -38,8 +38,8 @@ dependencies {
     implementation "androidx.core:core-ktx:$ktx"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    // coroutins
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutins"
+    // coroutines
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines"
 }
 
 repositories {
