--- a/build.gradle
+++ b/build.gradle
@@ -1,27 +1,27 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.5.21'
-    ext.lifecycle_ktx = "2.3.1"
+    ext.kotlin_version = '1.5.31'
+    ext.lifecycle_ktx = "2.4.0"
     ext.nav_version = "2.3.5"
-    ext.work_version = "2.6.0"
+    ext.work_version = "2.7.0"
     ext.room = "2.3.0"
     ext.room_compiler = "2.2.5"
     ext.compat = "1.3.1"
     ext.gson = "2.8.6"
     ext.retrofit = "2.9.0"
     ext.retrofit_gson = "2.9.0"
-    ext.okhttp_log = "4.9.0"
-    ext.okhttp = "4.9.0"
+    ext.okhttp_log = "4.9.2"
+    ext.okhttp = "4.9.2"
     ext.junit = "4.13.2"
     ext.junit_android = "1.1.3"
     ext.espresso = "3.4.0"
-    ext.ktx = "1.6.0"
-    ext.coroutins = "1.5.0"
+    ext.ktx = "1.7.0"
+    ext.coroutines = "1.5.0"
 
     project.ext {
         min = 20
-        target = 30
-        compile = 30
+        target = 31
+        compile = 31
         tools = "30.0.2"
     }
 
@@ -31,7 +31,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.2'
+        classpath 'com.android.tools.build:gradle:7.0.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
 
