--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,10 @@ buildscript {
     ext.kotlin_version = '1.5.31'
     ext.lifecycle_ktx = "2.4.0"
     ext.nav_version = "2.3.5"
-    ext.work_version = "2.7.0"
+    ext.work_version = "2.7.1"
     ext.room = "2.3.0"
     ext.room_compiler = "2.2.5"
-    ext.compat = "1.3.1"
+    ext.compat = "1.4.0"
     ext.gson = "2.8.6"
     ext.retrofit = "2.9.0"
     ext.retrofit_gson = "2.9.0"
@@ -16,8 +16,9 @@ buildscript {
     ext.junit_android = "1.1.3"
     ext.espresso = "3.4.0"
     ext.ktx = "1.7.0"
-    ext.coroutines = "1.5.0"
+    ext.coroutines = "1.5.2"
     ext.composeVersion = "1.0.5"
+    ext.compose_theme = "1.1.1"
     ext.hilt = "2.39.1"
     ext.hilt_jetpack = "1.0.0"
     ext.mockito_core = "3.7.0"
