--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,7 @@ dependencies {
     implementation "androidx.compose.material:material:$composeVersion"
     implementation "androidx.compose.runtime:runtime-livedata:$composeVersion"
     implementation "androidx.compose.ui:ui-tooling:$composeVersion"
-    implementation "com.google.android.material:compose-theme-adapter:$composeVersion"
+    implementation "com.google.android.material:compose-theme-adapter:$compose_theme"
 
     implementation "androidx.appcompat:appcompat:$compat"
 
@@ -75,8 +75,8 @@ dependencies {
     implementation "com.google.code.gson:gson:$gson"
 
     // hilt
-    implementation("com.google.dagger:hilt-android:2.39.1")
-    kapt("com.google.dagger:hilt-android-compiler:2.39.1")
+    implementation("com.google.dagger:hilt-android:2.40")
+    kapt("com.google.dagger:hilt-android-compiler:2.40")
     implementation("androidx.hilt:hilt-navigation-fragment:$hilt_jetpack")
     kapt("androidx.hilt:hilt-compiler:$hilt_jetpack")
     implementation 'androidx.hilt:hilt-work:1.0.0'
@@ -96,7 +96,6 @@ dependencies {
 
     androidTestImplementation "androidx.test.ext:junit:$junit_android"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espresso"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
     androidTestImplementation "com.android.support.test.espresso:espresso-contrib:3.3.0"
 
     implementation "androidx.core:core-ktx:$ktx"
