--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.5.31'
-    ext.lifecycle_ktx = "2.4.0"
-    ext.nav_version = "2.3.5"
-    ext.work_version = "2.7.0"
-    ext.room = "2.3.0"
+    ext.kotlin_version = '1.6.10'
+    ext.lifecycle_ktx = "2.4.1"
+    ext.nav_version = '2.4.1'
+    ext.work_version = "2.7.1"
+    ext.room = "2.4.2"
     ext.room_compiler = "2.2.5"
-    ext.compat = "1.3.1"
+    ext.compat = "1.4.1"
     ext.gson = "2.8.6"
     ext.retrofit = "2.9.0"
     ext.retrofit_gson = "2.9.0"
@@ -16,13 +16,13 @@ buildscript {
     ext.junit_android = "1.1.3"
     ext.espresso = "3.4.0"
     ext.ktx = "1.7.0"
-    ext.coroutines = "1.5.0"
+    ext.coroutines = "1.5.2"
 
     project.ext {
         min = 20
         target = 31
         compile = 31
-        tools = "30.0.2"
+        tools = "30.0.3"
     }
 
     repositories {
@@ -31,9 +31,9 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.3'
+        classpath 'com.android.tools.build:gradle:7.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
