--- a/models_impl/build.gradle
+++ b/models_impl/build.gradle
@@ -51,10 +51,10 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines"
 
     testImplementation "junit:junit:$junit"
-    testImplementation "org.mockito:mockito-core:3.7.0"
+    testImplementation "org.mockito:mockito-core:4.3.1"
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
     testImplementation "android.arch.core:core-testing:1.1.1"
-    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:$coroutines"
     testImplementation "com.google.code.gson:gson:$gson"
 }
 
