--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = '1.7.20'
-    ext.lifecycle_ktx = "2.5.1"
+    ext.kotlin_version = '1.8.20'
+    ext.lifecycle_ktx = "2.6.1"
     ext.nav_version = '2.5.3'
-    ext.work_version = "2.7.1"
-    ext.room = "2.4.3"
+    ext.work_version = "2.8.1"
+    ext.room = "2.5.1"
     ext.room_compiler = "2.2.5"
-    ext.compat = "1.5.1"
+    ext.compat = "1.6.1"
     ext.gson = "2.9.0"
     ext.retrofit = "2.9.0"
     ext.retrofit_gson = "2.9.0"
@@ -15,8 +15,11 @@ buildscript {
     ext.junit = "4.13.2"
     ext.junit_android = "1.1.3"
     ext.espresso = "3.4.0"
-    ext.ktx = "1.9.0"
+    ext.ktx = "1.10.0"
     ext.coroutines = "1.6.4"
+    ext.mockito_core = "5.2.0"
+    ext.mockito_kotlin = "2.2.0"
+    ext.testing = "1.1.1"
 
     project.ext {
         min = 20
@@ -31,7 +34,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.1'
+        classpath 'com.android.tools.build:gradle:7.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
 
