# agp migration to 8.0.0

--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,6 @@ kotlin.code.style=official
 -Pkapt.use.worker.api=true
 kapt.incremental.apt=true
 android.enableR8.fullMode=false
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
