--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext.kotlin_version = '1.8.20'
+
     ext.lifecycle_version = '2.6.1'
     ext.rxbinding3 = '3.1.0'
     ext.nav_version = "2.5.3"
@@ -28,12 +30,14 @@ buildscript {
     }
 
     repositories {
+        mavenCentral()
         google()
         jcenter()
         maven { url 'https://maven.google.com' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.0.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'androidx.navigation:navigation-safe-args-gradle-plugin:2.5.3'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -43,6 +47,7 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
         google()
         jcenter()
         maven { url 'https://maven.google.com' }
