--- a/models/build.gradle
+++ b/models/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion project.compile
-    buildToolsVersion project.tools
+    compileSdk project.compile
 
     defaultConfig {
         minSdkVersion project.min
