--- a/models_impl/build.gradle
+++ b/models_impl/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion project.compile
-    buildToolsVersion project.tools
+    compileSdk project.compile
 
     defaultConfig {
         minSdkVersion project.min
@@ -10,6 +9,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+        multiDexEnabled true
     }
 
     buildTypes {
